Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node-container
        image: anushkashukla003/node-app:35c9450027f696d56a2e21fe0921dbb768d2b4c3
        ports:
        - containerPort: 3000
