Rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: node-app
  namespace: argocd
spec:
  replicas: 2
  progressDeadlineSeconds: 60
  progressDeadlineAbort: true
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node-container
        image: anushkashukla003/node-app:8bac9759d4a011098a093774152abc1243e26f63
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          periodSeconds: 10
          failureThreshold: 5
          timeoutSeconds: 2
  strategy:
    canary:
      canaryService: node-service-canary
      stableService: node-service-stable
      analysis:
        templates:
        - templateName: node-health-check
      steps:
      - setWeight: 20
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - setWeight: 100
