Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service-stable
spec:
  selector:
    app: node
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-service-canary
spec:
  selector:
    app: node
  ports:
    - port: 80
      targetPort: 3000
